<resources>
    <string name="app_name">AirDesk</string>

    <string name="port">10001</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_workspaces">Airdesk Workspaces</string>
    <string name="title_activity_local_workspace">Local Workspace</string>
    <string name="title_activity_airdesk">Airdesk</string>
    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_workspace_title">Create Workspace</string>
    <string name="create_workspace_name">Name</string>
    <string name="create_workspace_quota">Quota</string>
    <string name="title_activity_workspace_files">WorkspaceFilesActivity</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="invite">Invite</string>
    <string name="privacy_title">itemTitle</string>
    <string name="workspace_name">workspace_name</string>
    <string name="update">Update</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="cancel">Cancel</string>
    <string name="file_name">File name</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="title_activity_wifi_direct">WifiDirectActivity</string>
    <string name="peer_devices">Peer devices</string>
    <string name="remembered_groups">Remembered groups</string>
    <string name="device_name">DeviceName</string>
    <string name="email_nickname">email_nickname</string>
</resources>
