<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WifiDirectActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDeviceName"
            android:text="@string/device_name"
            android:singleLine="true"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPeerDevices"
                android:text="@string/peer_devices"
                android:textColor="@color/ColorPrimaryDark"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                />
            <ListView
                android:id="@+id/peerDevicesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:clickable="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewRememberGroupsList"
                android:text="@string/remembered_groups"
                android:textColor="@color/ColorPrimaryDark"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                />
            <ListView
                android:id="@+id/rememberGroupsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:clickable="true" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
